# ansible-role-dell

./: .copier-answers.yml  .pre-commit-config.yaml  Makefile  README.md  compass.yaml  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: ism.yml  main.yml  perccli.yml  repo.yml
vars/: ism.yml  main.yml  perccli.yml  repo.yml
