[tool.poetry]
name = "ansible-role-dell"
version = "0.2.0"
description = "Install and configure Dell system update and packages with Ansible."
authors = ["Remerge GmbH <sre@remerge.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
pylint = "^2.17.2"
tox = "^4.4.11"
molecule = {extras = ["docker"], version = "^4.0.4"}
ansible-lint = { version = "^6.14.6", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
