[project]
name = "ansible-role-dell"
version = "0.0.0"
description = "Ansible Role for Dell"
authors = [{ name = "Remerge GmbH", email = "core@remerge.io" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff==0.12.8",
    "ansible-lint==25.7.0 ; platform_system != 'Windows'",
    "ansible-dev-tools",
]
test = [
    "pytest",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
